<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditorActivity"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/name_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/product_name_text_view"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/product_name_edit_text"
            android:layout_marginStart="8dp"
            android:hint="Product Name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/quantity_layout"
        android:layout_below="@id/name_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/quantity_text_view" />

        <Button
            android:id="@+id/decrement_button"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:text="-" />

        <TextView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:id="@+id/quantity_edit_text"
            android:gravity="center_horizontal"
            android:hint="0"/>

        <Button
            android:id="@+id/increment_button"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="+" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/supplier_name_layout"
        android:layout_below="@id/price_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suplier_name"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/supplier_name_text_view"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="Supplier Name"
            android:id="@+id/supplier_name_edit_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/supplier_no_layout"
        android:layout_below="@id/supplier_name_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_no"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/supplier_no_text_view"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="0987654321"
            android:inputType="number"
            android:id="@+id/supplier_no_edit_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/price_layout"
        android:layout_below="@id/quantity_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/price_text_view"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="100"
            android:inputType="number"
            android:id="@+id/price_edit_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name_layout"
        android:layout_below="@id/supplier_no_layout"
        android:orientation="horizontal"
        android:id="@+id/image_layout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_image_button"
            android:text="Select Image"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/product_image_view"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_alignEnd="@+id/name_layout"
        android:layout_alignTop="@+id/image_layout"
        app:srcCompat="@drawable/ic_no_image" />

</RelativeLayout>
