<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:listPreferredItemHeightLarge"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp">
    
    <ImageView
        android:layout_width="?android:listPreferredItemHeightLarge"
        android:layout_height="?android:listPreferredItemHeightLarge"
        android:id="@+id/product_image_view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_text_view"
        android:paddingStart="8dp"
        android:textColor="@android:color/black"
        android:layout_toEndOf="@id/product_image_view"
        tools:text="Product Name"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:layout_toEndOf="@id/product_image_view"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/in_stock_text_view"
            android:textColor="@android:color/black"
            android:text="@string/in_stock"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stock_no_text_view"
            android:textColor="@android:color/black"
            android:paddingStart="8dp"
            tools:text="0"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:layout_toEndOf="@id/product_image_view"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/current_price_text_view"
            android:textColor="@android:color/black"
            android:text="@string/price"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price_no_text_view"
            android:textColor="@android:color/black"
            android:paddingStart="8dp"
            tools:text="0"/>

    </LinearLayout>

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:focusable="false"
        android:text="@string/sale" />

</RelativeLayout>
